--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/FaviconMint.png" />
-    <link rel="shortcut icon" href="/FaviconMint.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/AtomicAI_Favicon.png" />
+    <link rel="shortcut icon" href="/AtomicAI_Favicon.png" />
     <title>Atomic AI | Automation and AI systems for small businesses</title>
     <meta name="description" content="Optimise the use of ChatGPT in your business efficiently and effectively. Book a free 15-minute consultation." />
     <meta name="author" content="Atomic AI" />
@@ -24,3 +24,5 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
